# htmx-test

./: Cargo.toml
assets/: base-styles.css  scripts.js
src/: current_datetime.rs  main.rs  paginated_list.rs  people.rs
templates/: add_person_form_block.html  add_person_response.html  base_page.html  current_datetime.html  current_datetime_block.html  index.html  paginated_list.html  paginated_list_items.html  people.html  people_list.html  people_table_body_block.html
